--- a/DataPreprocessing2.ipynb
+++ b/DataPreprocessing2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 97,
    "id": "fce05fce-a1fd-49a4-972d-46860777d3ff",
    "metadata": {},
    "outputs": [],
@@ -617,8 +617,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "d8010e9a-4b3a-4839-aece-432e3aefb6ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gru = torch.nn.GRU(input_size = 5, hidden_size = 3, num_layers=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "ce60aa9d-7d75-44f5-83de-46f86c634738",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.randn(3, 5, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "c66f2455-e0eb-4245-b344-b301528dd6d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.7606, -0.6435, -0.1769, -1.2964, -0.9328],\n",
+       "         [-0.5316, -0.5640,  0.0882,  1.3835,  0.3539],\n",
+       "         [ 1.8324, -0.2292, -0.8020, -1.4747, -0.0541],\n",
+       "         [-0.6323, -0.7169, -0.2268,  1.9690,  0.1143],\n",
+       "         [ 0.6190,  0.8411, -2.2479,  0.2791, -0.6485]],\n",
+       "\n",
+       "        [[-0.5636, -0.2744,  1.0614,  1.6762, -0.2682],\n",
+       "         [-1.8209,  0.5697, -0.6093, -1.2058,  0.9373],\n",
+       "         [-0.3847, -0.2412, -0.3489,  0.3419, -1.9268],\n",
+       "         [ 0.0416,  0.3064, -0.1255, -0.9199, -0.6506],\n",
+       "         [-0.2896, -1.4179,  1.7530,  0.1146,  0.2073]],\n",
+       "\n",
+       "        [[-1.7934,  1.5147,  1.4379,  0.9670,  1.0614],\n",
+       "         [-0.4330,  0.3590, -0.3347,  0.6064,  0.1310],\n",
+       "         [ 0.1455, -0.1465,  0.2352, -0.0569,  0.2094],\n",
+       "         [-0.5671, -0.6823,  0.7690, -1.1584,  0.2873],\n",
+       "         [ 1.7295, -1.0829, -0.5514,  2.2988, -0.1104]]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "20f194ea-bcfc-47c6-ba14-8abe02af79c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.rand(6, 7) #(batch_size, seq_len or max words per bach)\n",
+    "lengths = [7,7,6,5,4,2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "593de5af-cc71-4310-b016-2d102d1d5d07",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 7, 6, 5, 4, 2]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lengths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "18ebc41a-3424-4774-8a59-f9db0ff551da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.6346, 0.4711, 0.9906, 0.7849, 0.7462, 0.5860, 0.5907],\n",
+       "        [0.8719, 0.9433, 0.5214, 0.8487, 0.1704, 0.8424, 0.5195],\n",
+       "        [0.4170, 0.1870, 0.0618, 0.3893, 0.1823, 0.8014, 0.0000],\n",
+       "        [0.3333, 0.0549, 0.3940, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3459, 0.1796, 0.0064, 0.5855, 0.0000, 0.0000, 0.0000],\n",
+       "        [0.3830, 0.3656, 0.8027, 0.0000, 0.0000, 0.0000, 0.0000]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "e0c1e668-9dd8-4581-8d2d-286a4a576fa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets = torch.nn.utils.rnn.pack_padded_sequence(a, lengths, batch_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "00cbb49b-c305-455c-a837-e494fdadb241",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.6346, 0.8719, 0.4170, 0.3333, 0.3459, 0.3830, 0.4711, 0.9433, 0.1870,\n",
+       "        0.0549, 0.1796, 0.3656, 0.9906, 0.5214, 0.0618, 0.3940, 0.0064, 0.7849,\n",
+       "        0.8487, 0.3893, 0.0000, 0.5855, 0.7462, 0.1704, 0.1823, 0.0000, 0.5860,\n",
+       "        0.8424, 0.8014, 0.5907, 0.5195])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "targets[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "0c2fad74-4b0e-4036-bcdc-bde8468788dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([6, 6, 5, 5, 4, 3, 2])"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "targets[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "cff46d3a-62e0-4247-810c-33e6a0d6231f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.6346, 0.8719, 0.4170, 0.3333, 0.3459, 0.3830])\n",
+      "tensor([0.4711, 0.9433, 0.1870, 0.0549, 0.1796, 0.3656])\n",
+      "tensor([0.9906, 0.5214, 0.0618, 0.3940, 0.0064])\n",
+      "tensor([0.7849, 0.8487, 0.3893, 0.0000, 0.5855])\n",
+      "tensor([0.7462, 0.1704, 0.1823, 0.0000])\n",
+      "tensor([0.5860, 0.8424, 0.8014])\n",
+      "tensor([0.5907, 0.5195])\n"
+     ]
+    }
+   ],
+   "source": [
+    "cutoff = 0\n",
+    "for i in targets[1]:\n",
+    "    print(targets[0][cutoff:cutoff+i])\n",
+    "    cutoff += i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "7fa4ab30-1d6c-47e7-8827-03d6561aab45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = torch.rand(5,5) #(batch_size, seq_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "0332749d-2e2d-48b0-80e3-72405d43ada6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.5633, 0.5129, 0.8349, 0.5787, 0.7113],\n",
+       "        [0.7678, 0.4710, 0.0760, 0.6818, 0.1525],\n",
+       "        [0.0555, 0.3180, 0.1772, 0.6100, 0.9287],\n",
+       "        [0.7592, 0.5092, 0.7764, 0.2982, 0.7805],\n",
+       "        [0.8202, 0.4984, 0.6043, 0.1431, 0.4397]])"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#so each value in any row is basically the encoded word\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "824179fc-6ef2-47fe-aa24-fcfe60877a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.nn.functional.softmax(b, dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "e7971551-495f-4c77-86bf-47fadf3d9b04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1839, 0.1749, 0.2413, 0.1867, 0.2132],\n",
+       "        [0.2701, 0.2008, 0.1352, 0.2479, 0.1460],\n",
+       "        [0.1322, 0.1719, 0.1493, 0.2301, 0.3165],\n",
+       "        [0.2248, 0.1751, 0.2287, 0.1418, 0.2296],\n",
+       "        [0.2687, 0.1947, 0.2165, 0.1365, 0.1836]])"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "a2214727-a084-4d89-b937-b1584877289b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "bd0a3a96-4e07-4ec6-ace8-085f9287cd2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Custom Negetive Log Liklehood Loss\n",
+    "def maskNLLLoss(decoder_out, target, mask, device):\n",
+    "    ntotal = mask.sum()\n",
+    "    target = target.view(-1,1)\n",
+    "    #Decoder output shape: (batch_size, vocab_size), targets_size = (batch_size,1)\n",
+    "    gathered_tensor = torch.gather(decoder_out,1,target)\n",
+    "    cross_entropy = -torch.log(gathered_tensor)\n",
+    "    loss = cross_entropy.masked_select(mask)\n",
+    "    loss = loss.mean()\n",
+    "    loss = loss.to(device)\n",
+    "    return loss, ntotal.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff30d428-bb53-4c5e-9719-ac99f14743b6",
    "metadata": {},
    "outputs": [],
    "source": []
